# serializer version: 1
# name: test_build_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-961b4c22/example-961b4c22-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_961b4c22"]
        
        [project]
        name = "example-961b4c22"
        version = "0.0.0"
        dependencies = [
            '''example-a-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/src/example_961b4c22/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_961b4c22"]
        
        [project]
        name = "example-a-961b4c22"
        version = "1.0.0"
        dependencies = [
            '''example-b-961b4c22>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/src/example_a_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "3.0.0"
        dependencies = [
            '''example-c-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-961b4c22/example_961b4c22-0.0.0.tar.gz': 'md5:78387c54dc1123fc169bde1ad63aa11b',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0-py3-none-any.whl': 'md5:688872585dffc70638c7780f03147a2e',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0.tar.gz': 'md5:8ed996db89e98df9b698f9e90bec5038',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0-py3-none-any.whl': 'md5:e8b10e891619ae3f591fba6dfcac1458',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0.tar.gz': 'md5:6a6fe7b8bb871d712dc7883dc0cb0d68',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0-py3-none-any.whl': 'md5:6d052c40445daed79dcbac2f7ccdf801',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0.tar.gz': 'md5:82b9995b2b3738d5975416105d1ab986',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0-py3-none-any.whl': 'md5:f5ed4e0fb9dc2f029028f22d6903ea98',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0.tar.gz': 'md5:56f1ef2dedf69f360c55297e9d9b1f20',
      'tree': '''
        test_build_test_scenarios_exam0
        ├── build
        │   └── example-961b4c22
        │       ├── example-961b4c22-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_961b4c22
        │       │           └── __init__.py
        │       ├── example-a-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       └── example-b-961b4c22-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_961b4c22
        │                   └── __init__.py
        └── dist
            └── example-961b4c22
                ├── example_961b4c22-0.0.0.tar.gz
                ├── example_a_961b4c22-1.0.0-py3-none-any.whl
                ├── example_a_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-1.0.0-py3-none-any.whl
                ├── example_b_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-2.0.0-py3-none-any.whl
                ├── example_b_961b4c22-2.0.0.tar.gz
                ├── example_b_961b4c22-3.0.0-py3-none-any.whl
                └── example_b_961b4c22-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-961b4c22
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-toml-4a4ede4d/example-toml-4a4ede4d-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-4a4ede4d-0.0.0/pyproject.toml': 'md5:a531b7b0544fb70b1c705bbda8a6724c',
      'build/example-toml-4a4ede4d/example-toml-4a4ede4d-0.0.0/src/example_toml_4a4ede4d/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-a-4a4ede4d-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-a-4a4ede4d-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_a_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_a_4a4ede4d"]
        
        [project]
        name = "example-toml-a-4a4ede4d"
        version = "1.0.0"
        dependencies = [
            '''example-toml-b-4a4ede4d>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-a-4a4ede4d-1.0.0/src/example_toml_a_4a4ede4d/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_4a4ede4d"]
        
        [project]
        name = "example-toml-b-4a4ede4d"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-1.0.0/src/example_toml_b_4a4ede4d/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_4a4ede4d"]
        
        [project]
        name = "example-toml-b-4a4ede4d"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-2.0.0/src/example_toml_b_4a4ede4d/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_4a4ede4d"]
        
        [project]
        name = "example-toml-b-4a4ede4d"
        version = "3.0.0"
        dependencies = [
            '''example-toml-c-4a4ede4d''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-3.0.0/src/example_toml_b_4a4ede4d/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-toml-4a4ede4d/example_toml_4a4ede4d-0.0.0.tar.gz': 'md5:8d2873e0d003d4213d1fecef05f5202f',
      'dist/example-toml-4a4ede4d/example_toml_a_4a4ede4d-1.0.0-py3-none-any.whl': 'md5:83ce55954fb3c2445aa1b755ba28e956',
      'dist/example-toml-4a4ede4d/example_toml_a_4a4ede4d-1.0.0.tar.gz': 'md5:5fff429c4c7feb9d661954e6790c4a4e',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-1.0.0-py3-none-any.whl': 'md5:93f94fe0fd807da3daa1f151df861e45',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-1.0.0.tar.gz': 'md5:da0883a3e714b62d8661e198a861ded9',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-2.0.0-py3-none-any.whl': 'md5:856e8b537b73bf2501cb2c6dda277a93',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-2.0.0.tar.gz': 'md5:1cf9f15cb12580e98c3e6ce180348629',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-3.0.0-py3-none-any.whl': 'md5:859249e55bd062a23dfcde1c0eac179f',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-3.0.0.tar.gz': 'md5:3b25c0283bd5d269ba0cf728b1ddd40d',
      'tree': '''
        test_build_test_scenarios_exam1
        ├── build
        │   └── example-toml-4a4ede4d
        │       ├── example-toml-4a4ede4d-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_4a4ede4d
        │       │           └── __init__.py
        │       ├── example-toml-a-4a4ede4d-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_a_4a4ede4d
        │       │           └── __init__.py
        │       ├── example-toml-b-4a4ede4d-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_4a4ede4d
        │       │           └── __init__.py
        │       ├── example-toml-b-4a4ede4d-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_4a4ede4d
        │       │           └── __init__.py
        │       └── example-toml-b-4a4ede4d-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_toml_b_4a4ede4d
        │                   └── __init__.py
        └── dist
            └── example-toml-4a4ede4d
                ├── example_toml_4a4ede4d-0.0.0.tar.gz
                ├── example_toml_a_4a4ede4d-1.0.0-py3-none-any.whl
                ├── example_toml_a_4a4ede4d-1.0.0.tar.gz
                ├── example_toml_b_4a4ede4d-1.0.0-py3-none-any.whl
                ├── example_toml_b_4a4ede4d-1.0.0.tar.gz
                ├── example_toml_b_4a4ede4d-2.0.0-py3-none-any.whl
                ├── example_toml_b_4a4ede4d-2.0.0.tar.gz
                ├── example_toml_b_4a4ede4d-3.0.0-py3-none-any.whl
                └── example_toml_b_4a4ede4d-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-toml-4a4ede4d
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-yaml-4692130b/example-yaml-4692130b-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-4692130b-0.0.0/pyproject.toml': 'md5:47ff40e1cb004e6b8e2a196c83b3d5d5',
      'build/example-yaml-4692130b/example-yaml-4692130b-0.0.0/src/example_yaml_4692130b/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-a-4692130b-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-a-4692130b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_a_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_a_4692130b"]
        
        [project]
        name = "example-yaml-a-4692130b"
        version = "1.0.0"
        dependencies = [
            '''example-yaml-b-4692130b>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-a-4692130b-1.0.0/src/example_yaml_a_4692130b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_4692130b"]
        
        [project]
        name = "example-yaml-b-4692130b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-1.0.0/src/example_yaml_b_4692130b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_4692130b"]
        
        [project]
        name = "example-yaml-b-4692130b"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-2.0.0/src/example_yaml_b_4692130b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_4692130b"]
        
        [project]
        name = "example-yaml-b-4692130b"
        version = "3.0.0"
        dependencies = [
            '''example-yaml-c-4692130b''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-3.0.0/src/example_yaml_b_4692130b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-yaml-4692130b/example_yaml_4692130b-0.0.0.tar.gz': 'md5:dc8fef992b11413e901b42f77967e2f8',
      'dist/example-yaml-4692130b/example_yaml_a_4692130b-1.0.0-py3-none-any.whl': 'md5:f6aca694b08bb4ee42a177159b9f6bde',
      'dist/example-yaml-4692130b/example_yaml_a_4692130b-1.0.0.tar.gz': 'md5:f173d27690cf8ce11833c1928c05015f',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-1.0.0-py3-none-any.whl': 'md5:800cc41d800ed2acd63ab02730e6078c',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-1.0.0.tar.gz': 'md5:9b9063658216582e8b6c28b4dcf12abd',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-2.0.0-py3-none-any.whl': 'md5:1f3d8e76a75d92e6207de6780073aa7b',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-2.0.0.tar.gz': 'md5:2ae0e67e152c6b45af6dcedaeac5fc9f',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-3.0.0-py3-none-any.whl': 'md5:be0c1cbc3ba51e4895448fbf405b3685',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-3.0.0.tar.gz': 'md5:63cfe1d9f3276e8eb08606e44ec628e2',
      'tree': '''
        test_build_test_scenarios_exam2
        ├── build
        │   └── example-yaml-4692130b
        │       ├── example-yaml-4692130b-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_4692130b
        │       │           └── __init__.py
        │       ├── example-yaml-a-4692130b-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_a_4692130b
        │       │           └── __init__.py
        │       ├── example-yaml-b-4692130b-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_4692130b
        │       │           └── __init__.py
        │       ├── example-yaml-b-4692130b-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_4692130b
        │       │           └── __init__.py
        │       └── example-yaml-b-4692130b-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_yaml_b_4692130b
        │                   └── __init__.py
        └── dist
            └── example-yaml-4692130b
                ├── example_yaml_4692130b-0.0.0.tar.gz
                ├── example_yaml_a_4692130b-1.0.0-py3-none-any.whl
                ├── example_yaml_a_4692130b-1.0.0.tar.gz
                ├── example_yaml_b_4692130b-1.0.0-py3-none-any.whl
                ├── example_yaml_b_4692130b-1.0.0.tar.gz
                ├── example_yaml_b_4692130b-2.0.0-py3-none-any.whl
                ├── example_yaml_b_4692130b-2.0.0.tar.gz
                ├── example_yaml_b_4692130b-3.0.0-py3-none-any.whl
                └── example_yaml_b_4692130b-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-yaml-4692130b
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp0
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-961b4c22
      ├── environment
      │   └── python3.8
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp1
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-toml-4a4ede4d
      ├── environment
      │   └── python3.8
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp2
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-yaml-4692130b
      ├── environment
      │   └── python3.8
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
